--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,3 +6,6 @@ pymongo==3.12.3
 python-dotenv==1.0.0
 sqlparse==0.2.4
 djangorestframework-simplejwt
+requests==2.31.0
+aiohttp==3.9.3
+beautifulsoup4==4.12.3
