--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
+      MONGODB_TLSMODE: disabled
+    command: ["--tlsMode", "disabled", "--storageEngine", "wiredTiger"]
     ports:
       - "27017:27017"
     volumes:
